# convai

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_phase2_agents_evms_geofence.py
backend/app/: config.py  deps.py  main.py
backend/app/api/: agents.py  auth.py  completion.py  daily_reports.py  documents.py  evms.py  geofence.py  inspections.py  kakao.py  permits.py  portal.py  projects.py  quality.py  rag.py  reports.py  settings.py  tasks.py  vision.py  weather.py
backend/app/core/: database.py  security.py  storage.py
backend/app/models/: __init__.py  agent.py  base.py  daily_report.py  evms.py  inspection.py  permit.py  project.py  quality.py  rag.py  report.py  settings.py  task.py  user.py  weather.py
backend/app/schemas/: daily_report.py  inspection.py  project.py  quality.py  rag.py  settings.py  task.py  user.py  weather.py
backend/app/services/: ai_engine.py  completion_service.py  daily_report_gen.py  document_parser.py  evms_service.py  gantt.py  inspection_gen.py  kakao_service.py  pdf_service.py  rag_service.py  report_gen.py  scheduler.py  vision_service.py  weather_service.py
backend/app/services/agents/: anjeon.py  base.py  collaboration.py  gongsa.py  (+3 more)
backend/app/templates/: completion_summary.html  daily_report.html  inspection.html  inspection_list.html  permit_list.html  quality_list.html  report.html
backend/scripts/: seed_rag.py
backend/tests/: conftest.py  test_gantt.py  test_weather.py
(+33 files in other folders)
